@@ -9,9 +9,8 @@ Devise is a flexible authentication solution for Rails based on Warden. It:
 
 Right now it's composed of 12 modules:
 
-* Authenticatable: encrypts a password and validates the authenticity of a user while signing in.
+* Database Authenticatable: encrypts and stores a password in the database to validate the authenticity of an user while signing in.
 * Token Authenticatable: validates the authenticity of a user while signing in using an authentication token (also known as "single access token").
-* HttpAuthenticatable: sign in users using basic HTTP authentication.
 * Confirmable: sends emails with confirmation instructions and verifies whether an account is already confirmed during sign in.
 * Recoverable: resets the user password and sends reset instructions.
 * Registerable: handles signing up users through a registration process.
@@ -21,6 +20,8 @@ Right now it's composed of 12 modules:
 * Validatable: provides validations of email and password. It's optional and can be customized, so you're able to define your own validations.
 * Lockable: locks an account after a specified number of failed sign-in attempts. Can unlock via email or after a specified time period.
 * Activatable: use this module if you need to activate accounts by means other than confirmation.
+
+Additionaly, Devise has several extensions (listed at the end of this README) and has http authentication built in.
 
 == Examples
 
@@ -266,7 +267,7 @@ Please refer to TODO file.
 
 We have a long list of valued contributors. See the CHANGELOG or do `git shortlog -s -n` in the cloned repository.
 
-== Related Applications
+== Devise extensions
 
 * http://github.com/scambra/devise_invitable adds support to Devise for sending invitations by email.
 
